# amazon-trends-bot

./: .env.example  .gitignore  README.md  pyproject.toml  railway.toml
amazon_trends_bot/: __init__.py  __main__.py  config.py  main.py
amazon_trends_bot/api/: __init__.py  keepa_client.py  product_source.py  seed_client.py  seo_client.py  trends_client.py
amazon_trends_bot/bot/: __init__.py  handlers.py  keyboards.py  messages.py
amazon_trends_bot/domain/: __init__.py  models.py
amazon_trends_bot/filters/: __init__.py  brand_filter.py  difficulty_filter.py  keyword_filter.py
amazon_trends_bot/scheduler/: __init__.py  apscheduler.py  daily_job.py
amazon_trends_bot/services/: __init__.py  keyword_service.py  matching_service.py  product_service.py  ranking_service.py  report_service.py
amazon_trends_bot/storage/: __init__.py  sqlite_storage.py
tests/: test_filters.py  test_handlers.py  test_matching_ranking.py  test_report_service.py  test_seed_links.py  test_storage.py
