[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-trends-bot"
version = "0.1.0"
description = "Telegram SEO bot for Amazon product and Google Trends matching"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.7,<4.0",
  "aiosqlite>=0.20,<1.0",
  "apscheduler>=3.10,<4.0",
  "httpx>=0.27,<1.0",
  "keepa>=1.4.4,<2.0",
  "python-dotenv>=1.0,<2.0",
  "pytrends>=4.9.2,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["amazon_trends_bot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
